           real confusion (with bundling turned on, -foobar was "-f oobar"
           instead of an unknown option.
* 20181225 Add validation to --proxy-family (when proxy-version=1) and
           --proxy-version options.
* 20181225 --copy-routing should error when no argument given.
* 20190105 Update copyright year to 2019
* 20190105 Add documentation for missing --quit-after synonym STARTTLS
* 20190216 Adding data and dot as valid --drop-after-send and --drop-after
           arguments
* 20190618 Typo in documentation for --ehlo, reported by Konstantin Stephan
* 20190710 Clarify how XCLIENT arguments are grouped in --xclient doc
* 20190712 Enforce key=value format for arguments to --auth-extra and
           --auth-map
* 20190713 Small code tidy around %DATE% token replacement
* 20190713 Add %NEWLINE% as a new --data token
* 20190713 If the arg to --data looks like a file but is not openable,
           error and exit instead of using it the file name as the raw
           data value
* 20190713 --attach option processing was calling die() instead of
           ptrans/exit on error
* 20190713 Fix handling of --option=arg option format which prevented it
           from being used with --header and --attach* options
* 20190814 --tls-optional-strict was incorrectly marked internally as
           optionally accepting an argument
* 20190814 --use-old-data-tokens was not completely removed, clean up
* 20190815 Updating copyright year to 2019
* 20190815 --protocol's argument was incorrectly marked as optional
* 20180816 Rework how the --show-time-lapse option is tracked internally
           and displayed in --dump output
* 20190817 Rearrange internal option definition structure in preparation
           for major rework
* 20190817 Remove interactive prompts for helo and from when hostname
           cannot be determined internally.  Just error instead.
* 20190817 Cleaning up error messages that contained extra newlines