@@ -6,5 +6,3 @@ title: p, command line, invalid arg
 
 test action: CMD_CAPTURE %SWAKS% --dump TRANSPORT --to user@example.com --from recip@example.com --server "ser ver" \
     --p badportname
-
-skip: This should fail, but it reprompts.  readdress when options are changed to fail
