@@ -2,5 +2,3 @@ auto: REMOVE_FILE,CREATE_FILE,MUNGE,COMPARE_FILE %TESTID%.stdout %TESTID%.stderr
 
 test action: CMD_CAPTURE %SWAKS% --dump TRANSPORT --to user@example.com --from recip@example.com \
     --server [::1]:foobar
-
-skip: this should fail - should not re-prompt for bogus info provided on command line
