@@ -848,3 +848,5 @@
 * 20190817 Remove interactive prompts for helo and from when hostname
            cannot be determined internally.  Just error instead.
 * 20190817 Cleaning up error messages that contained extra newlines
+* 20190817 Remove re-prompting for port when an invalid service name was
+           supplied. Just error and exit instead
